2001-04-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (TopLevel): Set w3m-mode-map if not exec w3m-mode() yet.

2001-04-12  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-tcup.el (shimbun-get-headers): Don't decode buffer.

2001-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-images, w3m-fontify-anchors): Put an url
	string to each anchor as a `help-echo' property when the value of
	`w3m-track-mouse' is non-nil.
	(w3m-track-mouse): New user option.

2001-04-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-copy-buffer): Use `w3m-history-copy' to make copies
	of `w3m-history' and `w3m-history-flat'.

2001-04-10  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* mime-w3m.el (mime-w3m-mode-map): Refer `w3m-key-binding' to
	avoid the problem reported in [emacs-w3m:00498].

2001-04-10  Keisuke Nishida  <kxn30@po.cwru.edu>

	* w3m-search.el (w3m-search): Find default using thing-at-point.

2001-04-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-about-history): Use `w3m-history-flat' instead of
	`w3m-url-history'.
	(w3m-view-source): Don't bind `w3m-url-yrotsih' nor
	`w3m-url-history'.
	(w3m-redisplay-with-coding-system): Don't treat `w3m-url-history'.
	(w3m-reload-this-page): Ditto.
	(w3m-view-next-page): Use `w3m-history-forward' instead of
	`w3m-url-yrotsih'.
	(w3m-view-previous-page): Use `w3m-history-backward' instead of
	`w3m-url-history'.
	(w3m-exec): Use `w3m-history-push' instead of `w3m-url-yrotsih' or
	`w3m-url-history'.
	(w3m-toolbar): Use `w3m-history-next-link-available-p' and
	`w3m-history-previous-link-available-p'.
	(w3m-url-yrotsih, w3m-url-history): Removed.
	(TopLevel): Require `w3m-hist'.

2001-04-09  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-mhonarc.el (shimbun-make-contents): Fixed.

2001-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-info-like-map): Use `(shift iso-lefttab)' instead of
	`S-iso-lefttab'.
	(w3m-lynx-like-map): Ditto.
